--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,7 +1,7 @@
 .main {
-    background-color: #d9d9d9;
     box-sizing: border-box;
     position: relative;
     height: 100%;
     width: 100%;
+    margin-bottom: 3rem;
 }
