--- a/src/components/LoginRegisterForm/LoginForm.css
+++ b/src/components/LoginRegisterForm/LoginForm.css
@@ -1,10 +1,17 @@
-.login-form {
-    max-width: 400px;
-    padding: 20px;
-    margin: auto;
+.container-form {
+    display: flex;
+    height: 80vh;
     background: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1618);
+    border-radius: 20px;
+    overflow: hidden;
+
+}
+
+.login-form {
+    min-width: 350px;
+    margin: auto;
+
 }
 
 .login-form .login-input {
@@ -23,6 +30,10 @@
     width: 100%;
 }
 
+.login-form .login-button:hover {
+    background-color: #fb8600;
+}
+
 .login-form .link {
     color: #0d6efd;
     text-decoration: none;
@@ -36,5 +47,6 @@
     padding: 5px;
     font-size: 16px;
 }
+
 
 /* Puedes añadir más estilos personalizados aquí para que coincida con el diseño proporcionado */
